<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArbolActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="3"
        android:max="6"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tv_tituloarbol"
                android:textSize="28sp"
                android:textColor="#000"/>

            <Spinner
                android:id="@+id/s_especie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_numeroarbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_numeroarbol"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_distanciaplantas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_distanciaplantas"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_distanciamuro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_distanciamuro"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_circunferencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_circunferencia"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/s_cazuela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/et_comentario"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:onClick="continuar"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:text="@string/btn_continuar" />
</RelativeLayout>