<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalizacionActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="5"
        android:max="6"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tv_titulolocal"
                android:textSize="28sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_latitud"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/tv_longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_longitud"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned" />

            <Button
                android:id="@+id/btn_geo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="actualizar"
                android:text="@string/btn_geo" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:onClick="continuar"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:text="@string/btn_continuar" />
</RelativeLayout>