<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tv_titulo"
                android:textSize="28sp"
                android:textColor="#000"/>

            <!--
                       <VideoView
                           android:id="@+id/videoView"
                           android:layout_width="match_parent"
                           android:layout_height="174dp"
                           " />
             -->


                       <ImageView
                           android:id="@+id/imageView"
                           android:layout_width="wrap_content"
                           android:layout_height="309dp"
                           app:srcCompat="@drawable/credito" />



            <Button
                android:id="@+id/btn_censar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="censar"
                android:text="@string/btn_censar" />

            <Button
                android:id="@+id/btn_verregistros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="verRegistros"
                android:text="@string/btn_verregistros" />


            <Button
                android:id="@+id/btn_enviarregistros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="enviarRegistros"
                android:text="@string/btn_enviarregistros" />


            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:gravity="center"
                android:padding="20px"
                android:text="@string/link"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>