<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tv_titulodetalle"
                android:textSize="28sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_datos_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_titulousuario"
                android:textSize="22sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_nombre_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_apellido_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_dni_u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/tv_datos_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_titulovereda"
                android:textSize="22sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_nombre_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_numero_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_ancho_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_paridad_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_transito_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_datos_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_tituloarbol"
                android:textSize="22sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_especie_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_numero_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_distanciaplantas_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_distanciamuro_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_circunferencia_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_cazuela_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_comentario_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_datos_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_tituloarbol"
                android:textSize="22sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_estadosanitario_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_inclinacion_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_ahuecamiento_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_cables_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_luminaria_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_danos_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_veredas_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_podas_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_datos_co"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_titulolocal"
                android:textSize="22sp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/tv_latitud_co"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_longitud_co"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:text="@string/btn_editar" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="eliminar"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:text="@string/btn_eliminar" />
    </LinearLayout>

</RelativeLayout>